# SingpleImageManipulation

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SimpleImageManipulation  SimpleImageManipulation.cpp  SimpleImageManipulation.h  cmake_install.cmake  main.cpp
